<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ui.edit_movie.EditItemFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/details_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/item_image"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:cropToPadding="true"
                    android:scaleType="fitXY"/>

                <Button
                    android:id="@+id/done_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentEnd="true"
                    android:backgroundTint="@color/text_gray_background"
                    android:text="@string/done"
                    android:textSize="20sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingHorizontal="50dp"
                    android:text="@string/movie_title"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <ImageView
                    android:id="@+id/heart"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_empty_heart" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/item_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/year_example"
                    android:textSize="20sp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/separator"
                    android:textSize="25sp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/item_length"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/movie_length_example"
                    android:textSize="20sp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/separator"
                    android:textSize="25sp"
                    android:gravity="center"/>


                <TextView
                    android:id="@+id/item_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/stars_example"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/gold"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"/>
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/movie_plot_detail_layout"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/item_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="12dp"
                android:text="@string/movie_description_example"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MaterialAlertDialog.Material3.Body.Text.CenterStacked"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="7dp"
                android:layout_marginBottom="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/notes_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:gravity="top"
                    android:hint="@string/note_hint"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:visibility="gone"
        android:layout_centerInParent="true" />

</RelativeLayout>
