<?xml version="1.0" encoding="utf-8"?>

    <androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ui.movie_details.MovieDetailsFragment"
    android:id="@+id/item_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        android:minHeight="600dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:id="@+id/details_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/item_image"
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:cropToPadding="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/background"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/item_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:paddingHorizontal="45dp"
                            android:text="@string/movie_title"
                            android:textSize="25sp"
                            android:textAlignment="center"/>

                        <ImageView
                            android:id="@+id/heart"
                            android:layout_alignParentEnd="true"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_gravity="end"
                            android:src="@drawable/ic_empty_heart" />
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/item_year"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/year_example"
                            android:textSize="20sp"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/seperator"
                            android:textSize="25sp"
                            android:gravity="center"/>

                        <TextView
                            android:id="@+id/item_length"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/movie_length_example"
                            android:textSize="20sp"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/seperator"
                            android:textSize="25sp"
                            android:gravity="center"/>


                        <TextView
                            android:id="@+id/item_rating"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/stars_example"
                            android:textSize="20sp"
                            android:gravity="center"
                            android:textColor="@color/gold"/>

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.2"/>
                    </LinearLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/movie_plot_detail_layout"
                        android:textStyle="bold"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/item_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="12dp"
                        android:text="@string/movie_description_example"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/movie_notes_detail_layout"
                        android:textStyle="bold"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/item_comments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="12dp"
                        android:text="@string/movie_description_example"
                        android:textSize="20sp"/>

                </LinearLayout>

            </ScrollView>
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:visibility="gone"
                android:layout_centerInParent="true" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
