<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:id="@+id/backdrop"
                    android:layout_height="150dp"
                    android:cropToPadding="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/background"
                    android:contentDescription="@string/movie_poster"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/backdrop"
                    android:id="@+id/movie_title"
                    android:paddingHorizontal="10dp"
                    android:layout_centerInParent="true"
                    android:background="@color/text_gray_background"
                    android:text="@string/movie_title"
                    android:textSize="22sp"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/length"
                    android:layout_weight="2"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/movie_time"
                    android:text=""
                    android:layout_weight="5"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:layout_weight="2"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/gold"
                    android:id="@+id/stars"
                    android:layout_weight="5"/>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/heart"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_alignBottom="@id/details"
            android:layout_alignEnd="@id/details"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_empty_heart"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>